feat: add likes crud endpoints
