# src/routes/(auth)/api/v1/phrases/[phraseId=integer]/likes/+server.ts
@@ -1,6 +1,6 @@
-import { deletePhrase } from "$lib/phrases/services/delete-phrase";
-import { getPhrase } from "$lib/phrases/services/get-phrase";
-import { updatePhrase } from "$lib/phrases/services/update-phrase";
+import { createLike } from "$lib/phrases/services/create-like";
+import { deleteLike } from "$lib/phrases/services/delete-like";
+import { getLikes } from "$lib/phrases/services/get-likes";
 import { getSupabase } from "@supabase/auth-helpers-sveltekit";
 import { error, type RequestHandler } from "@sveltejs/kit";
 
@@ -14,12 +14,12 @@ export const GET: RequestHandler = async (event) => {
     throw error(404);
   }
   const { supabaseClient } = await getSupabase(event);
-  const phrase = await getPhrase(supabaseClient, phraseId);
-  return new Response(JSON.stringify(phrase));
+  const likes = await getLikes(supabaseClient, phraseId);
+  return new Response(JSON.stringify(likes));
 };
 
 export const PUT: RequestHandler = async (event) => {
-  const { request, params } = event;
+  const { params } = event;
   if (params.phraseId == null) {
     throw error(404);
   }
@@ -31,28 +31,23 @@ export const PUT: RequestHandler = async (event) => {
   if (session == null) {
     throw error(401);
   }
-  const data = await request.formData();
-  const content = data.get("content")?.toString();
-  if (content == null || content === "") {
-    throw error(400, { message: "missing content parameter" });
-  }
-  await updatePhrase(supabaseClient, phraseId, { content });
+  await createLike(supabaseClient, phraseId, session.user.id);
   return new Response(undefined);
 };
 
 export const DELETE: RequestHandler = async (event) => {
   const { params } = event;
   if (params.phraseId == null) {
-    return new Response(undefined, { status: 204 });
+    throw error(404);
   }
   const phraseId = Number(params.phraseId);
   if (isNaN(phraseId)) {
-    return new Response(undefined, { status: 204 });
+    throw error(404);
   }
   const { session, supabaseClient } = await getSupabase(event);
   if (session == null) {
     throw error(401);
   }
-  await deletePhrase(supabaseClient, phraseId);
+  await deleteLike(supabaseClient, phraseId, session.user.id);
   return new Response(undefined, { status: 204 });
 };
